<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTxt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTxt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTxt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password" />

    <Button
        android:id="@+id/bton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:text="@string/Signup1"
        android:textColor="#FFFFFF" />

</LinearLayout>
